# pruningg

./: .gitignore  README.md  pyproject.toml
RESULTS/: eda_hc.py  eda_hcc.py  eda_sa.py  eda_sga.py  ga_results_QWEN_32B.json  hermes-llama-3.1-hc.json  hermes-llama-3.1-sa-0.75-0.9.json  hermes-llama-3.1-sa.json  hermes-llama-3.1-sga.json  hermes-llama-3.1-sga_0.7_0.9.json
src/: evaluate_model.py  finetune.py  hc.py  run_all_optimizers.py  sa.py  sga.py  transformer.py  utils.py
